# Concord

./: .gitignore  README.md  commit-msg.tmp  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FIREWALL_AND_PORTS.md  LIBP2P_V2_TO_V3_MIGRATION.md  LIBP2P_V3_REFERENCE.md  UI_STRUCTURE.md
relay/: Dockerfile  fly.toml  package-lock.json  package.json  relay-server.js
scripts/: bundle-node.js  bundle-sidecar.js  p2p-sidecar.js  relay.js  test-relay-chat.js
src/: App.tsx  config.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChannelHeader.tsx  ConnectionDetails.tsx  ConnectionPanel.tsx  ErrorBoundary.tsx  LeftBar.tsx  MainLayout.tsx  MessageInput.tsx  MessageList.tsx  NetworkLog.tsx  ResizeHandle.tsx  RightSidebar.tsx  Sidebar.tsx  UpdateChecker.tsx
src/hooks/: useP2P.ts
src/services/: identity.ts  knownPeers.ts  libp2p.ts  p2pBridge.ts  relay.ts
src/stores/: incognitoStore.ts  messageStore.ts  spaceStore.ts
src/types/: spaces.ts
