[package]
name = "concord"
version = "0.1.0"
description = "Decentralized instant messaging"
authors = ["Concord"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
