[package]
name = "concord"
version = "0.2.7"
description = "Decentralized instant messaging"
authors = ["Concord"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
